Fix alignment of top right hand controls

--- a/porick/public/css/base.css
+++ b/porick/public/css/base.css
@@ -160,6 +160,7 @@ body {
 }
 
 .top_right_controls {
+    margin-right: -14px;
     float: left;
 }
 
